# code_space

./: .gitignore  README.md
code_snippet/cpp/config/: makefile.64
code_snippet/cpp/config/include/: server_config.h
code_snippet/cpp/config/makeinclude/: make_macro.include
code_snippet/cpp/config/src/: server_config.cpp
demo/claude/: .mcp.json
demo/claude/claude-demo-project/: .gitignore  CLAUDE.md  Makefile  go.mod
demo/claude/hooks/: main.go
demo/claude/hooks/.claude/: settings.json
demo/claude/mcp/: hello-mcp-server.go
demo/cpp_demo/: WORKSPACE
demo/cpp_demo/cpp11/auto/: issame.cpp  out
demo/cpp_demo/cpp11/base/: base.cpp
demo/cpp_demo/cpp11/bind/: a.out  bind.cpp
demo/cpp_demo/cpp11/constexpr/: out  (+1 more)
demo/cpp_demo/folly/: bazel-bin  bazel-folly  bazel-out  bazel-testlogs
demo/cpp_demo/gtest/: CMakeLists.txt  hello_test.cpp
demo/cpp_demo/vectortest/: main  main.cpp
demo/go_demo/: go.mod  go.sum
demo/go_demo/coretest/: coretest  main.go
demo/go_demo/errgroup/: ExampleErrgroup.go
demo/go_demo/flatbuffers/: recallItem.fbs
demo/go_demo/semaphore/: semaphore.go
demo/go_demo/singleflight/: singleflight.go
demo/go_demo/slice/: main.go  slice
demo/go_demo/struct2json/: struct2json.go
demo/go_demo/tensorflowgo/: hello_tf.go
demo/go_demo/testcontext/: main.go
demo/go_demo/testdag/: testdag  testdag.go
demo/go_demo/testgoroutine/: main.go
demo/go_demo/teststruct/: main.go  teststruct
demo/go_demo/unittest/: go.mod  go.sum
demo/python/venusllm/: testllm.py
summary_code/cpp/config/: makefile  makefile.32  makefile.64
(+74 files in other folders)
